// Copyright 2022 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// vim: noexpandtab

syntax = "proto3";

package reflectutil;

option go_package = "go.chromium.org/luci/common/proto/reflectutil;reflectutil";

message TestMapMessage {
  map<bool,string> bool_map = 1;

  map<int32,string> int32_map = 2;
  map<int64,string> int64_map = 3;

  map<uint32,string> uint32_map = 4;
  map<uint64,string> uint64_map = 5;

  map<string,string> string_map = 6;
}

message TestPathMessage {
  message Inner {
    string str = 1;
  }

  Inner single_inner = 1;
  map<string, Inner> map_inner = 2;
  map<int32, Inner> int_map_inner = 3;
  repeated Inner multi_inner = 4;
}

message TestShallowCopyMessage {
  message Inner {
    string field = 1;
  }

  string field = 1;
  repeated string repeated_field = 2;
  map<string, string> mapped_field = 3;

  Inner inner_msg = 4;
  repeated Inner repeated_msg = 5;
  map<string, Inner> mapped_msg = 6;
}
